--- a/src/tmux/tmux.conf
+++ b/src/tmux/tmux.conf
@@ -54,7 +54,7 @@ bind-key -T copy-mode-vi "y" send-keys -X copy-selection
 bind - split-window -v
 
 # [ PREFIX + | ] Split window vertically
-bind | split-window -h
+bind _ split-window -h
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 
