--- a/src/tmux/tmux.conf
+++ b/src/tmux/tmux.conf
@@ -11,6 +11,9 @@ set -g base-index 1
 # Make pane index start at 1
 setw -g pane-base-index 1
 
+# Make mouse working
+set -g mouse on
+
 # Remove delay when sending commands
 # (default is 500 milliseconds)
 set -sg escape-time 1
